<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_logs"
        android:icon="@drawable/ic_list_alt"
        android:title="@string/nav_logs" />
    <item
        android:id="@+id/nav_analytics"
        android:icon="@drawable/ic_bar_chart"
        android:title="@string/nav_analytics" />
    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/ic_description"
        android:title="@string/nav_report" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
